Listening json messages
Client now listens to json messages.

*Create json messages processor.

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.bieganski</groupId>
-  <artifactId>jchat_client</artifactId>
+  <artifactId>jchat.client</artifactId>
   <version>0.1</version>
 
   <name>JChat</name>
