Changes after tests
After using this project as liblary some bugs occured.
Done:
*Removed user input loop from connection.
(Not all UI use loop)
*Now connection doesn't have UI but just ConnectionCallback
*UI extends connection callback
*UI gets messages and not strings

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.bieganski</groupId>
-  <artifactId>jchat.client</artifactId>
+  <artifactId>jchat_client</artifactId>
+  <packaging>pom</packaging>
   <version>0.1</version>
 
   <name>JChat</name>
